--- a/Temperature/LoginDemo/Base.lproj/Main.storyboard
+++ b/Temperature/LoginDemo/Base.lproj/Main.storyboard
@@ -288,7 +288,7 @@
         <!--My Classes-->
         <scene sceneID="Mh2-J2-05a">
             <objects>
-                <viewController storyboardIdentifier="HomeVC" id="Ydq-pT-iQr" customClass="HomeViewController" customModule="Temperature" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="Ydq-pT-iQr" customClass="MyClassesViewController" customModule="Temperature" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="nTC-vn-BTB">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
